Fix homepage to have Installable Modules and Create a table view for Investigations

--- a/app/styles/layout.module.css
+++ b/app/styles/layout.module.css
@@ -1,4 +1,4 @@
-.container {
+/* .container {
   display: grid;
   grid-template-areas:
     "nav"
@@ -8,8 +8,40 @@
   grid-template-rows: auto auto 1fr 36px;
   align-items: center;
   min-height: 100vh;
+  background-color: rgb(48, 46, 46);
+} */
+
+.container {
+  margin: 5%;
+  width: 80%;
 }
 
+.row {
+  display: flex;
+  width: 100%
+}
+
+.row::after {
+  display: block;
+  clear: both;
+  content: "";
+  margin-top: 5%;
+}
+
+
+.col_1 {width: 8.33%};
+.col_2 {width: 16.66%;}
+.col_3 {width: 25%;}
+.col_4 {width: 33.33%;}
+.col_5 {width: 41.66%;}
+.col_6 {width: 50%;}
+.col_7 {width: 58.33%;}
+.col_8 {width: 66.66%;}
+.col_9 {width: 75%;}
+.col_10 {width: 83.33%;}
+.col_11 {width: 91.66%;}
+.col_12 {width: 100%;}
+/* 
 .logo {
   height: 40vmin;
   pointer-events: none;
@@ -74,4 +106,4 @@
   100% {
     transform: translateY(0px);
   }
-}
+} */
